--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
-body{
+/* body{
     color: aqua;
 }
 .icon{
    width: 20px;
    height: 20px;
-     fill: currentColor;                                  
-
-
-}
+     fill: currentColor
+    } */
 .box{
     outline: 1px solid black;
-    background-color: white;
+    
     width: 100px;
 
 }
@@ -23,6 +21,8 @@ body{
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    background-color: #fff;
+    color:#AFB1B8;
      
 }
 
@@ -30,4 +30,10 @@ body{
 .link:focus{
     background-color: #2196F3;
     color: white;
+}
+
+.icon{
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
 }
